syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated";

import "product-service.proto";

service ActivityService {
    rpc GetUserActivity (UserActivityRequest) returns (UserActivity);
    rpc GetInactiveUsers (UsersActivityRequest) returns (UserActivityList);
    rpc registerActivity (UserActivityRequest) returns (UserActivity);
    rpc HealthCheck (Ping) returns (Ping);
}

message UserActivity {
    int32 id = 1;
    string date = 2;
}

message UserActivityList {
    repeated UserActivity users = 1;
}

message UserActivityRequest {
    int32 id = 1;
}

message UsersActivityRequest {
}

